# Bud-Analysis

./: .gitignore  README.md
base/: README.md  pyproject.toml
base/core/: data.py  export.py  schemas.py
base/viewer/: README.md  STYLE.md  app.py
base/viewer/routes/: web.py
base/viewer/services/: run_loader.py
base/viewer/static/: app.js
base/viewer/static/css/: viewer.css
base/viewer/templates/: index.html
bolletje-trs/: README.md  config.py  prepare.py  train.py
bud-analysis-core/: CLEANUP_REFACTOR_GOAL.md  MODEL_ROBUSTNESS_GOAL.md  README.md  pyproject.toml
bud-analysis-core/core/: aggregators.py  backbones.py  data.py  embeddings.py  export.py  heads.py  optimization.py  plotting.py  run_context.py  schemas.py
bud-analysis-core/viewer/: README.md  app.py
bud-analysis-core/viewer/routes/: api.py
bud-analysis-core/viewer/services/: run_loader.py
bud-analysis-core/viewer/static/: app.js  theme.js
bud-analysis-core/viewer/static/css/: base.css  components.css  viewer.css
bud-analysis-core/viewer/templates/: index.html
ripeness/: README.md  config.py  export.py  prepare.py  requirements.txt  train.py
ripeness-trs/: README.md  check_crop.py  config.py  prepare.py  train.py
ripeness-us/: README.md  config.py  export.py  link_cultivars.py  prepare.py  requirements.txt  train.py
