[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "base"
version = "0.0.1"
description = "Task-agnostic framework: frozen DINOv3 backbone + regression heads + Optuna sweep + unified ONNX export."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "torch",
    "torchvision",
    "torchmetrics",
    "termcolor",
    "optuna",
    "tqdm",
    "matplotlib",
    "scikit-learn",
    "umap-learn",
    "onnx",
    "onnxruntime",  # runs the exported ONNX (export round-trip tests + downstream inference)
    "Flask>=3.0.0",  # the bundled viewer app (base/viewer) — core ships with it
    "pytest",  # the test suite ships with core, so a plain editable install can run it
]

[tool.setuptools]
packages = ["core"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]